--- a/package.json
+++ b/package.json
@@ -11,10 +11,24 @@
   "dependencies": {
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "typescript": "*"
   },
   "devDependencies": {
-    "eslint": "8.22.0",
-    "eslint-config-next": "12.2.5"
+    "@types/node": "^18.7.6",
+    "@types/react": "^18.0.17",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "autoprefixer": "^10.4.8",
+    "eslint": "^8.0.1",
+    "eslint-config-next": "12.2.5",
+    "eslint-config-standard-with-typescript": "^22.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.30.1",
+    "postcss": "^8.4.16",
+    "postcss-preset-env": "^7.8.0",
+    "prettier": "2.7.1",
+    "tailwindcss": "^3.1.8"
   }
 }
